# MLX8_W1_dropout-disco

./: .env  .env.example  .gitignore  DEMO_HackMD_bkup.md  README.md  connect.sh  hello.py  load_env.sh  pull_weights.sh  push_env.sh  pyproject.toml  run_word2vec.sh  setup.sh  test.txt
Charles/: .env.example  README.md  duckdb-processed-parquet.sql  feature-fusion-ablation.py  feature-fusion-wo-karma-comments.py  feature-fusion.py  gpu-vm.log.txt
Ethan/: data-quality-check.ipynb  skipgram-test.ipynb
Ewan/: feature_fusion_CBOW_hn.py  notebook.ipynb  tokeniser.py  tokeniser_debug.py
course_materials/cortex.mlx/: Project - Predicting upvotes on Hacker News.md
freemvmt/: eda.ipynb
postgresql/: .env.example  .gitignore  README.md  data-processing.py  db-utils.py  docker-compose.yml
postgresql/old/: Dockerfile  README.md
regression_model/: feature_fusion_CBOW_hn.py
src/: data.py  feature_fusion_CBOW_hn.py  main.py  model.py  skipgram.py  tokeniser.py
text8/: .env.example  .gitignore  README.md  word2vec-text8.py
weights/: word2vec_cbow_text8-hn_snowy-field-44.pt  word2vec_cbow_text8-hn_snowy-field-44_loss.json  word2vec_cbow_text8-hn_vibrant-water-53.pt  word2vec_cbow_text8-hn_vibrant-water-53_loss.json  word2vec_cbow_text8-hn_vibrant-water-53_vocab.json
word2vec/: data.py  main.py  model.py  skipgram.py  tokeniser.py  trainer.py
