[project]
name = "mlx8-w1-dropout-disco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "torch>=2.7.1",
]
