[project]
name = "mlx8-w1-dropout-disco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=1.26,<2.0", # Downgrade numpy for compatibility
    "pandas>=2.3.0",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "torch<=2.2",
    "pyarrow>=14.0.0,<15.0.0",
    "gensim>=4.3.3",
    "wandb>=0.20.1",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
    "jupyter>=1.1.1",
]
